--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="format-detection" content="telephone=no">
     <title>UI developer - leecho</title>
     <link rel="icon" type="image/png" sizes="32x32" href="./src/image/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="./src/image/favicon-96x96.png">
