--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./src/css/mobile.css" media="screen and (max-width:720px)">
     <script src="./src/js/jQuery.js"></script>
     <script src="./src/js/handlebars.js"></script>
-    <script src="./src/js/work.js"></script>
+    <!-- <script src="./src/js/work.js"></script> -->
     <script src="./src/js/index.js" defer></script>
 </head>
 <body>
